# 2020-khcup-tetris

./: .editorconfig  README.md  problem-level-0.tex  problem-level-9.tex
tetris-interactor/: Cargo.toml
tetris-interactor/src/: main.rs
tetris-interactor/src/snapshots/: tetris_interactor__tests__tetris_board-2.snap  tetris_interactor__tests__tetris_board-3.snap  tetris_interactor__tests__tetris_board-4.snap  tetris_interactor__tests__tetris_board-5.snap  tetris_interactor__tests__tetris_board-6.snap  tetris_interactor__tests__tetris_board-7.snap  tetris_interactor__tests__tetris_board.snap  tetris_interactor__tests__tetromino_blocks_I_180.snap  tetris_interactor__tests__tetromino_blocks_J_0.snap  tetris_interactor__tests__tetromino_blocks_J_180.snap  tetris_interactor__tests__tetromino_blocks_J_270.snap  tetris_interactor__tests__tetromino_blocks_J_90.snap  tetris_interactor__tests__tetromino_blocks_L_0.snap  tetris_interactor__tests__tetromino_blocks_L_180.snap  tetris_interactor__tests__tetromino_blocks_L_270.snap  tetris_interactor__tests__tetromino_blocks_L_90.snap  tetris_interactor__tests__tetromino_blocks_O_270.snap  tetris_interactor__tests__tetromino_blocks_S_0.snap  tetris_interactor__tests__tetromino_blocks_S_270.snap  tetris_interactor__tests__tetromino_blocks_T_0.snap  tetris_interactor__tests__tetromino_blocks_T_180.snap  tetris_interactor__tests__tetromino_blocks_T_270.snap  tetris_interactor__tests__tetromino_blocks_T_90.snap  tetris_interactor__tests__tetromino_blocks_Z_0.snap  tetris_interactor__tests__tetromino_blocks_Z_90.snap
(+24 files in other folders)
